--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.6",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
   }
 }
