--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm-run-all -p esbuild-watch server-watch",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+
+    "esbuild-watch": "node esbuild.config.mjs",
+    "server-watch": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +21,8 @@
     "@types/better-sqlite3": "^7.6.10",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "esbuild": "0.21.3",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.4.5"
   }
 }
