--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "npm-run-all -p esbuild-watch server-watch",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "serve": "node index.js",
-
     "esbuild-watch": "node esbuild.config.mjs",
     "server-watch": "node --watch index.js"
   },
@@ -16,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^10.0.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "esbuild": "0.21.3",
