--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^10.0.0",
+    "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
