--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^10.0.0",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "datatables.net-bs5": "^2.0.8",
+    "express": "^4.19.2",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20.12.12",
     "esbuild": "0.21.3",
     "npm-run-all": "^4.1.5",
