--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
+    "@types/bootstrap": "^5.2.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jquery": "^3.5.30",
