--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "datatables.net-bs5": "^2.0.8",
+    "datatables.net-buttons-bs5": "^3.0.2",
+    "datatables.net-select-bs5": "^2.0.3",
     "express": "^4.19.2",
     "jquery": "^3.7.1"
   },
