--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "datatables.net-buttons-bs5": "^3.0.2",
     "datatables.net-select-bs5": "^2.0.3",
     "express": "^4.19.2",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
