--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "datatables.net-bs5": "^2.0.8",
     "datatables.net-buttons-bs5": "^3.0.2",
+    "datatables.net-searchpanes-dt": "^2.3.0",
     "datatables.net-select-bs5": "^2.0.3",
     "express": "^4.19.2",
     "jquery": "^3.7.1",
