--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "better-sqlite3": "^10.0.0",
     "bootstrap": "^5.3.3",
+    "convert-csv-to-json": "^2.47.0",
     "cors": "^2.8.5",
     "datatables.net-bs5": "^2.0.8",
     "datatables.net-buttons-bs5": "^3.0.2",
     "datatables.net-searchpanes-dt": "^2.3.0",
     "datatables.net-select-bs5": "^2.0.3",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1"
   },
@@ -30,6 +32,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jquery": "^3.5.30",
     "@types/node": "^20.12.12",
     "esbuild": "0.21.3",
