--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "jquery": "^3.7.1",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
