--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "serve": "node index.js",
     "esbuild-watch": "node esbuild.config.mjs",
-    "server-watch": "node --watch index.js"
+    "server-watch": "node --watch index.js",
+    "tool": "node ./tools/build/db-tool.js"
   },
   "keywords": [],
   "author": "",
